fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1053,9 +1053,11 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 			html, body {
 			width: 100%;
-			height: auto;
+			height: 100%;
 			margin: 0;
 			padding: 0;
+			overflow-x: hidden;
+			-webkit-overflow-scrolling: touch;
 		}
 			.row {
 				display: flex;
